exports[`invalid(1): a { display: grid; flex-direction: column; } 1`] = `

  1 | a { display: grid; flex-direction: column; }

`;

exports[`invalid(1): a { display: grid; flex-direction: column; } 2`] = `

Message:
> 1 | a { display: grid; flex-direction: column; }
    |                    ^^^^^^^^^^^^^^^^^^^^^^ \`flex-direction\` has no effect with \`display: grid\`. It requires a flex container.

`;

exports[`invalid(10): a { display: flex; grid-auto-rows: 100px; } 1`] = `

  1 | a { display: flex; grid-auto-rows: 100px; }

`;

exports[`invalid(10): a { display: flex; grid-auto-rows: 100px; } 2`] = `

Message:
> 1 | a { display: flex; grid-auto-rows: 100px; }
    |                    ^^^^^^^^^^^^^^^^^^^^^ \`grid-auto-rows\` has no effect with \`display: flex\`. It requires a grid container.

`;

exports[`invalid(100): a { overflow: visible; text-overflow: \\65 llipsis c\\6c ip; } 1`] = `

  1 | a { overflow: visible; text-overflow: \\65 llipsis c\\6c ip; }

`;

exports[`invalid(100): a { overflow: visible; text-overflow: \\65 llipsis c\\6c ip; } 2`] = `

Message:
> 1 | a { overflow: visible; text-overflow: \\65 llipsis c\\6c ip; }
    |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`text-overflow: ellipsis clip\` has no effect with \`overflow: visible\`. Ellipsis requires clipped inline overflow.

`;

exports[`invalid(101): a { overflow: visible visible; text-overflow: clip /* marker */ ellipsis; writing-mode: vertical-rl; } 1`] = `

  1 | a { overflow: visible visible; text-overflow: clip /* marker */ ellipsis; writing-mode: vertical-rl; }

`;

exports[`invalid(101): a { overflow: visible visible; text-overflow: clip /* marker */ ellipsis; writing-mode: vertical-rl; } 2`] = `

Message:
> 1 | a { overflow: visible visible; text-overflow: clip /* marker */ ellipsis; writing-mode: vertical-rl; }
    |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`text-overflow: clip ellipsis\` has no effect with \`overflow: visible\`. Ellipsis requires clipped inline overflow.

`;

exports[`invalid(102): a { display: flex; overflow: hidden; text-overflow: ellipsis; } 1`] = `

  1 | a { display: flex; overflow: hidden; text-overflow: ellipsis; }

`;

exports[`invalid(102): a { display: flex; overflow: hidden; text-overflow: ellipsis; } 2`] = `

Message:
> 1 | a { display: flex; overflow: hidden; text-overflow: ellipsis; }
    |                                      ^^^^^^^^^^^^^^^^^^^^^^^ \`text-overflow: ellipsis\` has no effect with \`display: flex\`. Apply it to a block container holding the text.

`;

exports[`invalid(103): a { display: grid; overflow: hidden; text-overflow: ellipsis; } 1`] = `

  1 | a { display: grid; overflow: hidden; text-overflow: ellipsis; }

`;

exports[`invalid(103): a { display: grid; overflow: hidden; text-overflow: ellipsis; } 2`] = `

Message:
> 1 | a { display: grid; overflow: hidden; text-overflow: ellipsis; }
    |                                      ^^^^^^^^^^^^^^^^^^^^^^^ \`text-overflow: ellipsis\` has no effect with \`display: grid\`. Apply it to a block container holding the text.

`;

exports[`invalid(104): a { display: inline-flex; overflow: hidden; text-overflow: ellipsis; } 1`] = `

  1 | a { display: inline-flex; overflow: hidden; text-overflow: ellipsis; }

`;

exports[`invalid(104): a { display: inline-flex; overflow: hidden; text-overflow: ellipsis; } 2`] = `

Message:
> 1 | a { display: inline-flex; overflow: hidden; text-overflow: ellipsis; }
    |                                             ^^^^^^^^^^^^^^^^^^^^^^^ \`text-overflow: ellipsis\` has no effect with \`display: inline-flex\`. Apply it to a block container holding the text.

`;

exports[`invalid(105): a { display: inline grid; overflow: hidden; text-overflow: ellipsis; } 1`] = `

  1 | a { display: inline grid; overflow: hidden; text-overflow: ellipsis; }

`;

exports[`invalid(105): a { display: inline grid; overflow: hidden; text-overflow: ellipsis; } 2`] = `

Message:
> 1 | a { display: inline grid; overflow: hidden; text-overflow: ellipsis; }
    |                                             ^^^^^^^^^^^^^^^^^^^^^^^ \`text-overflow: ellipsis\` has no effect with \`display: inline grid\`. Apply it to a block container holding the text.

`;

exports[`invalid(106): a { display: grid; text-overflow: ellipsis clip; } 1`] = `

  1 | a { display: grid; text-overflow: ellipsis clip; }

`;

exports[`invalid(106): a { display: grid; text-overflow: ellipsis clip; } 2`] = `

Message:
> 1 | a { display: grid; text-overflow: ellipsis clip; }
    |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`text-overflow: ellipsis clip\` has no effect with \`display: grid\`. Apply it to a block container holding the text.

`;

exports[`invalid(107): a { display: inline flex; text-overflow: ellipsis ellipsis; } 1`] = `

  1 | a { display: inline flex; text-overflow: ellipsis ellipsis; }

`;

exports[`invalid(107): a { display: inline flex; text-overflow: ellipsis ellipsis; } 2`] = `

Message:
> 1 | a { display: inline flex; text-overflow: ellipsis ellipsis; }
    |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`text-overflow: ellipsis ellipsis\` has no effect with \`display: inline flex\`. Apply it to a block container holding the text.

`;

exports[`invalid(108): a { TEXT-OVERFLOW: CLIP ELLIPSIS !important; DISPLAY: GRID; } 1`] = `

  1 | a { TEXT-OVERFLOW: CLIP ELLIPSIS !important; DISPLAY: GRID; }

`;

exports[`invalid(108): a { TEXT-OVERFLOW: CLIP ELLIPSIS !important; DISPLAY: GRID; } 2`] = `

Message:
> 1 | a { TEXT-OVERFLOW: CLIP ELLIPSIS !important; DISPLAY: GRID; }
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`text-overflow: clip ellipsis\` has no effect with \`display: grid\`. Apply it to a block container holding the text.

`;

exports[`invalid(109): a { display: \\67 rid; text-overflow: \\65 llipsis; } 1`] = `

  1 | a { display: \\67 rid; text-overflow: \\65 llipsis; }

`;

exports[`invalid(109): a { display: \\67 rid; text-overflow: \\65 llipsis; } 2`] = `

Message:
> 1 | a { display: \\67 rid; text-overflow: \\65 llipsis; }
    |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^ \`text-overflow: ellipsis\` has no effect with \`display: grid\`. Apply it to a block container holding the text.

`;

exports[`invalid(11): a { display: flex; grid-auto-flow: column dense; } 1`] = `

  1 | a { display: flex; grid-auto-flow: column dense; }

`;

exports[`invalid(11): a { display: flex; grid-auto-flow: column dense; } 2`] = `

Message:
> 1 | a { display: flex; grid-auto-flow: column dense; }
    |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`grid-auto-flow\` has no effect with \`display: flex\`. It requires a grid container.

`;

exports[`invalid(110): a { @supports (display: flex) { display: flex; text-overflow: /* marker */ ellipsis; } } 1`] = `

  1 | a { @supports (display: flex) { display: flex; text-overflow: /* marker */ ellipsis; } }

`;

exports[`invalid(110): a { @supports (display: flex) { display: flex; text-overflow: /* marker */ ellipsis; } } 2`] = `

Message:
> 1 | a { @supports (display: flex) { display: flex; text-overflow: /* marker */ ellipsis; } }
    |                                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`text-overflow: ellipsis\` has no effect with \`display: flex\`. Apply it to a block container holding the text.

`;

exports[`invalid(111): a { display: table; border-collapse: collapse; border-spacing: 8px; } 1`] = `

  1 | a { display: table; border-collapse: collapse; border-spacing: 8px; }

`;

exports[`invalid(111): a { display: table; border-collapse: collapse; border-spacing: 8px; } 2`] = `

Message:
> 1 | a { display: table; border-collapse: collapse; border-spacing: 8px; }
    |                                                ^^^^^^^^^^^^^^^^^^^ \`border-spacing\` has no effect on this table with \`border-collapse: collapse\`. Use \`border-collapse: separate\` for spacing between cells.

`;

exports[`invalid(112): a { display: inline-table; border-collapse: collapse; border-spacing: 8px; } 1`] = `

  1 | a { display: inline-table; border-collapse: collapse; border-spacing: 8px; }

`;

exports[`invalid(112): a { display: inline-table; border-collapse: collapse; border-spacing: 8px; } 2`] = `

Message:
> 1 | a { display: inline-table; border-collapse: collapse; border-spacing: 8px; }
    |                                                       ^^^^^^^^^^^^^^^^^^^ \`border-spacing\` has no effect on this table with \`border-collapse: collapse\`. Use \`border-collapse: separate\` for spacing between cells.

`;

exports[`invalid(113): a { display: block table; border-collapse: collapse; border-spacing: 8px; } 1`] = `

  1 | a { display: block table; border-collapse: collapse; border-spacing: 8px; }

`;

exports[`invalid(113): a { display: block table; border-collapse: collapse; border-spacing: 8px; } 2`] = `

Message:
> 1 | a { display: block table; border-collapse: collapse; border-spacing: 8px; }
    |                                                      ^^^^^^^^^^^^^^^^^^^ \`border-spacing\` has no effect on this table with \`border-collapse: collapse\`. Use \`border-collapse: separate\` for spacing between cells.

`;

exports[`invalid(114): a { display: inline table; border-collapse: collapse; border-spacing: 8px; } 1`] = `

  1 | a { display: inline table; border-collapse: collapse; border-spacing: 8px; }

`;

exports[`invalid(114): a { display: inline table; border-collapse: collapse; border-spacing: 8px; } 2`] = `

Message:
> 1 | a { display: inline table; border-collapse: collapse; border-spacing: 8px; }
    |                                                       ^^^^^^^^^^^^^^^^^^^ \`border-spacing\` has no effect on this table with \`border-collapse: collapse\`. Use \`border-collapse: separate\` for spacing between cells.

`;

exports[`invalid(115): a { display: table block; border-collapse: collapse; border-spacing: 8px; } 1`] = `

  1 | a { display: table block; border-collapse: collapse; border-spacing: 8px; }

`;

exports[`invalid(115): a { display: table block; border-collapse: collapse; border-spacing: 8px; } 2`] = `

Message:
> 1 | a { display: table block; border-collapse: collapse; border-spacing: 8px; }
    |                                                      ^^^^^^^^^^^^^^^^^^^ \`border-spacing\` has no effect on this table with \`border-collapse: collapse\`. Use \`border-collapse: separate\` for spacing between cells.

`;

exports[`invalid(116): a { display: table inline; border-collapse: collapse; border-spacing: 8px; } 1`] = `

  1 | a { display: table inline; border-collapse: collapse; border-spacing: 8px; }

`;

exports[`invalid(116): a { display: table inline; border-collapse: collapse; border-spacing: 8px; } 2`] = `

Message:
> 1 | a { display: table inline; border-collapse: collapse; border-spacing: 8px; }
    |                                                       ^^^^^^^^^^^^^^^^^^^ \`border-spacing\` has no effect on this table with \`border-collapse: collapse\`. Use \`border-collapse: separate\` for spacing between cells.

`;

exports[`invalid(117): a { border-spacing: 8px 12px !important; border-collapse: collapse; display: table; } 1`] = `

  1 | a { border-spacing: 8px 12px !important; border-collapse: collapse; display: table; }

`;

exports[`invalid(117): a { border-spacing: 8px 12px !important; border-collapse: collapse; display: table; } 2`] = `

Message:
> 1 | a { border-spacing: 8px 12px !important; border-collapse: collapse; display: table; }
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`border-spacing\` has no effect on this table with \`border-collapse: collapse\`. Use \`border-collapse: separate\` for spacing between cells.

`;

exports[`invalid(118): a { DISPLAY: INLINE-TABLE; BORDER-COLLAPSE: COLLAPSE; BORDER-SPACING: 8px; } 1`] = `

  1 | a { DISPLAY: INLINE-TABLE; BORDER-COLLAPSE: COLLAPSE; BORDER-SPACING: 8px; }

`;

exports[`invalid(118): a { DISPLAY: INLINE-TABLE; BORDER-COLLAPSE: COLLAPSE; BORDER-SPACING: 8px; } 2`] = `

Message:
> 1 | a { DISPLAY: INLINE-TABLE; BORDER-COLLAPSE: COLLAPSE; BORDER-SPACING: 8px; }
    |                                                       ^^^^^^^^^^^^^^^^^^^ \`border-spacing\` has no effect on this table with \`border-collapse: collapse\`. Use \`border-collapse: separate\` for spacing between cells.

`;

exports[`invalid(119): a { display: \\74 able; border-\\63 ollapse: c\\6f llapse; border-spa\\63 ing: 8px; } 1`] = `

  1 | a { display: \\74 able; border-\\63 ollapse: c\\6f llapse; border-spa\\63 ing: 8px; }

`;

exports[`invalid(119): a { display: \\74 able; border-\\63 ollapse: c\\6f llapse; border-spa\\63 ing: 8px; } 2`] = `

Message:
> 1 | a { display: \\74 able; border-\\63 ollapse: c\\6f llapse; border-spa\\63 ing: 8px; }
    |                                                         ^^^^^^^^^^^^^^^^^^^^^^ \`border-spacing\` has no effect on this table with \`border-collapse: collapse\`. Use \`border-collapse: separate\` for spacing between cells.

`;

exports[`invalid(12): a { position: static; top: 20px; } 1`] = `

  1 | a { position: static; top: 20px; }

`;

exports[`invalid(12): a { position: static; top: 20px; } 2`] = `

Message:
> 1 | a { position: static; top: 20px; }
    |                       ^^^^^^^^^ \`top\` has no effect with \`position: static\`. Insets require a positioned element.

`;

exports[`invalid(120): a { display: table; border-collapse: /* borders */ collapse; border-spacing: /* cells */ calc(1rem + 2px); } 1`] = `

  1 | a { display: table; border-collapse: /* borders */ collapse; border-spacing: /* cells */ calc(1rem + 2px); }

`;

exports[`invalid(120): a { display: table; border-collapse: /* borders */ collapse; border-spacing: /* cells */ calc(1rem + 2px); } 2`] = `

Message:
> 1 | a { display: table; border-collapse: /* borders */ collapse; border-spacing: /* cells */ calc(1rem + 2px); }
    |                                                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`border-spacing\` has no effect on this table with \`border-collapse: collapse\`. Use \`border-collapse: separate\` for spacing between cells.

`;

exports[`invalid(121): a { @supports (display: table) { display: table; border-collapse: collapse; border-spacing: 8px; } } 1`] = `

  1 | a { @supports (display: table) { display: table; border-collapse: collapse; border-spacing: 8px; } }

`;

exports[`invalid(121): a { @supports (display: table) { display: table; border-collapse: collapse; border-spacing: 8px; } } 2`] = `

Message:
> 1 | a { @supports (display: table) { display: table; border-collapse: collapse; border-spacing: 8px; } }
    |                                                                             ^^^^^^^^^^^^^^^^^^^ \`border-spacing\` has no effect on this table with \`border-collapse: collapse\`. Use \`border-collapse: separate\` for spacing between cells.

`;

exports[`invalid(122): a { display: table; border-collapse: collapse; padding: 8px; } 1`] = `

  1 | a { display: table; border-collapse: collapse; padding: 8px; }

`;

exports[`invalid(122): a { display: table; border-collapse: collapse; padding: 8px; } 2`] = `

Message:
> 1 | a { display: table; border-collapse: collapse; padding: 8px; }
    |                                                ^^^^^^^^^^^^ \`padding\` has no effect on this table with \`border-collapse: collapse\`. Apply padding to table cells or use separate borders.

`;

exports[`invalid(123): a { display: table; border-collapse: collapse; padding-top: 8px; } 1`] = `

  1 | a { display: table; border-collapse: collapse; padding-top: 8px; }

`;

exports[`invalid(123): a { display: table; border-collapse: collapse; padding-top: 8px; } 2`] = `

Message:
> 1 | a { display: table; border-collapse: collapse; padding-top: 8px; }
    |                                                ^^^^^^^^^^^^^^^^ \`padding-top\` has no effect on this table with \`border-collapse: collapse\`. Apply padding to table cells or use separate borders.

`;

exports[`invalid(124): a { display: table; border-collapse: collapse; padding-right: 8px; } 1`] = `

  1 | a { display: table; border-collapse: collapse; padding-right: 8px; }

`;

exports[`invalid(124): a { display: table; border-collapse: collapse; padding-right: 8px; } 2`] = `

Message:
> 1 | a { display: table; border-collapse: collapse; padding-right: 8px; }
    |                                                ^^^^^^^^^^^^^^^^^^ \`padding-right\` has no effect on this table with \`border-collapse: collapse\`. Apply padding to table cells or use separate borders.

`;

exports[`invalid(125): a { display: table; border-collapse: collapse; padding-bottom: 8px; } 1`] = `

  1 | a { display: table; border-collapse: collapse; padding-bottom: 8px; }

`;

exports[`invalid(125): a { display: table; border-collapse: collapse; padding-bottom: 8px; } 2`] = `

Message:
> 1 | a { display: table; border-collapse: collapse; padding-bottom: 8px; }
    |                                                ^^^^^^^^^^^^^^^^^^^ \`padding-bottom\` has no effect on this table with \`border-collapse: collapse\`. Apply padding to table cells or use separate borders.

`;

exports[`invalid(126): a { display: table; border-collapse: collapse; padding-left: 8px; } 1`] = `

  1 | a { display: table; border-collapse: collapse; padding-left: 8px; }

`;

exports[`invalid(126): a { display: table; border-collapse: collapse; padding-left: 8px; } 2`] = `

Message:
> 1 | a { display: table; border-collapse: collapse; padding-left: 8px; }
    |                                                ^^^^^^^^^^^^^^^^^ \`padding-left\` has no effect on this table with \`border-collapse: collapse\`. Apply padding to table cells or use separate borders.

`;

exports[`invalid(127): a { display: table; border-collapse: collapse; padding-block: 8px; } 1`] = `

  1 | a { display: table; border-collapse: collapse; padding-block: 8px; }

`;

exports[`invalid(127): a { display: table; border-collapse: collapse; padding-block: 8px; } 2`] = `

Message:
> 1 | a { display: table; border-collapse: collapse; padding-block: 8px; }
    |                                                ^^^^^^^^^^^^^^^^^^ \`padding-block\` has no effect on this table with \`border-collapse: collapse\`. Apply padding to table cells or use separate borders.

`;

exports[`invalid(128): a { display: table; border-collapse: collapse; padding-inline: 8px; } 1`] = `

  1 | a { display: table; border-collapse: collapse; padding-inline: 8px; }

`;

exports[`invalid(128): a { display: table; border-collapse: collapse; padding-inline: 8px; } 2`] = `

Message:
> 1 | a { display: table; border-collapse: collapse; padding-inline: 8px; }
    |                                                ^^^^^^^^^^^^^^^^^^^ \`padding-inline\` has no effect on this table with \`border-collapse: collapse\`. Apply padding to table cells or use separate borders.

`;

exports[`invalid(129): a { display: table; border-collapse: collapse; padding-block-start: 8px; } 1`] = `

  1 | a { display: table; border-collapse: collapse; padding-block-start: 8px; }

`;

exports[`invalid(129): a { display: table; border-collapse: collapse; padding-block-start: 8px; } 2`] = `

Message:
> 1 | a { display: table; border-collapse: collapse; padding-block-start: 8px; }
    |                                                ^^^^^^^^^^^^^^^^^^^^^^^^ \`padding-block-start\` has no effect on this table with \`border-collapse: collapse\`. Apply padding to table cells or use separate borders.

`;

exports[`invalid(13): a { position: static; right: 20px; } 1`] = `

  1 | a { position: static; right: 20px; }

`;

exports[`invalid(13): a { position: static; right: 20px; } 2`] = `

Message:
> 1 | a { position: static; right: 20px; }
    |                       ^^^^^^^^^^^ \`right\` has no effect with \`position: static\`. Insets require a positioned element.

`;

exports[`invalid(130): a { display: table; border-collapse: collapse; padding-block-end: 8px; } 1`] = `

  1 | a { display: table; border-collapse: collapse; padding-block-end: 8px; }

`;

exports[`invalid(130): a { display: table; border-collapse: collapse; padding-block-end: 8px; } 2`] = `

Message:
> 1 | a { display: table; border-collapse: collapse; padding-block-end: 8px; }
    |                                                ^^^^^^^^^^^^^^^^^^^^^^ \`padding-block-end\` has no effect on this table with \`border-collapse: collapse\`. Apply padding to table cells or use separate borders.

`;

exports[`invalid(131): a { display: table; border-collapse: collapse; padding-inline-start: 8px; } 1`] = `

  1 | a { display: table; border-collapse: collapse; padding-inline-start: 8px; }

`;

exports[`invalid(131): a { display: table; border-collapse: collapse; padding-inline-start: 8px; } 2`] = `

Message:
> 1 | a { display: table; border-collapse: collapse; padding-inline-start: 8px; }
    |                                                ^^^^^^^^^^^^^^^^^^^^^^^^^ \`padding-inline-start\` has no effect on this table with \`border-collapse: collapse\`. Apply padding to table cells or use separate borders.

`;

exports[`invalid(132): a { display: table; border-collapse: collapse; padding-inline-end: 8px; } 1`] = `

  1 | a { display: table; border-collapse: collapse; padding-inline-end: 8px; }

`;

exports[`invalid(132): a { display: table; border-collapse: collapse; padding-inline-end: 8px; } 2`] = `

Message:
> 1 | a { display: table; border-collapse: collapse; padding-inline-end: 8px; }
    |                                                ^^^^^^^^^^^^^^^^^^^^^^^ \`padding-inline-end\` has no effect on this table with \`border-collapse: collapse\`. Apply padding to table cells or use separate borders.

`;

exports[`invalid(133): a { display: inline-table; border-collapse: collapse; padding: 8px 12px; } 1`] = `

  1 | a { display: inline-table; border-collapse: collapse; padding: 8px 12px; }

`;

exports[`invalid(133): a { display: inline-table; border-collapse: collapse; padding: 8px 12px; } 2`] = `

Message:
> 1 | a { display: inline-table; border-collapse: collapse; padding: 8px 12px; }
    |                                                       ^^^^^^^^^^^^^^^^^ \`padding\` has no effect on this table with \`border-collapse: collapse\`. Apply padding to table cells or use separate borders.

`;

exports[`invalid(134): a { display: inline table; border-collapse: collapse; padding-inline: 8px 12px; writing-mode: vertical-rl; } 1`] = `

  1 | a { display: inline table; border-collapse: collapse; padding-inline: 8px 12px; writing-mode: vertical-rl; }

`;

exports[`invalid(134): a { display: inline table; border-collapse: collapse; padding-inline: 8px 12px; writing-mode: vertical-rl; } 2`] = `

Message:
> 1 | a { display: inline table; border-collapse: collapse; padding-inline: 8px 12px; writing-mode: vertical-rl; }
    |                                                       ^^^^^^^^^^^^^^^^^^^^^^^^ \`padding-inline\` has no effect on this table with \`border-collapse: collapse\`. Apply padding to table cells or use separate borders.

`;

exports[`invalid(135): a { PADDING-BLOCK: 8px !important; DISPLAY: TABLE; BORDER-COLLAPSE: COLLAPSE; } 1`] = `

  1 | a { PADDING-BLOCK: 8px !important; DISPLAY: TABLE; BORDER-COLLAPSE: COLLAPSE; }

`;

exports[`invalid(135): a { PADDING-BLOCK: 8px !important; DISPLAY: TABLE; BORDER-COLLAPSE: COLLAPSE; } 2`] = `

Message:
> 1 | a { PADDING-BLOCK: 8px !important; DISPLAY: TABLE; BORDER-COLLAPSE: COLLAPSE; }
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`padding-block\` has no effect on this table with \`border-collapse: collapse\`. Apply padding to table cells or use separate borders.

`;

exports[`invalid(136): a { display: table; border-collapse: collapse; pa\\64 ding-inline-end: 8px; } 1`] = `

  1 | a { display: table; border-collapse: collapse; pa\\64 ding-inline-end: 8px; }

`;

exports[`invalid(136): a { display: table; border-collapse: collapse; pa\\64 ding-inline-end: 8px; } 2`] = `

Message:
> 1 | a { display: table; border-collapse: collapse; pa\\64 ding-inline-end: 8px; }
    |                                                ^^^^^^^^^^^^^^^^^^^^^^^^^^ \`padding-inline-end\` has no effect on this table with \`border-collapse: collapse\`. Apply padding to table cells or use separate borders.

`;

exports[`invalid(137): a { display: table; border-collapse: collapse; padding: /* inset */ calc(1rem + 2px); } 1`] = `

  1 | a { display: table; border-collapse: collapse; padding: /* inset */ calc(1rem + 2px); }

`;

exports[`invalid(137): a { display: table; border-collapse: collapse; padding: /* inset */ calc(1rem + 2px); } 2`] = `

Message:
> 1 | a { display: table; border-collapse: collapse; padding: /* inset */ calc(1rem + 2px); }
    |                                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`padding\` has no effect on this table with \`border-collapse: collapse\`. Apply padding to table cells or use separate borders.

`;

exports[`invalid(138): a { @media (width > 1px) { display: table; border-collapse: collapse; padding: 8px; } } 1`] = `

  1 | a { @media (width > 1px) { display: table; border-collapse: collapse; padding: 8px; } }

`;

exports[`invalid(138): a { @media (width > 1px) { display: table; border-collapse: collapse; padding: 8px; } } 2`] = `

Message:
> 1 | a { @media (width > 1px) { display: table; border-collapse: collapse; padding: 8px; } }
    |                                                                       ^^^^^^^^^^^^ \`padding\` has no effect on this table with \`border-collapse: collapse\`. Apply padding to table cells or use separate borders.

`;

exports[`invalid(139): a { position: absolute; clear: left; } 1`] = `

  1 | a { position: absolute; clear: left; }

`;

exports[`invalid(139): a { position: absolute; clear: left; } 2`] = `

Message:
> 1 | a { position: absolute; clear: left; }
    |                         ^^^^^^^^^^^ \`clear: left\` has no effect with \`position: absolute\`. Absolutely positioned elements do not participate in normal flow.

`;

exports[`invalid(14): a { position: static; bottom: 20px; } 1`] = `

  1 | a { position: static; bottom: 20px; }

`;

exports[`invalid(14): a { position: static; bottom: 20px; } 2`] = `

Message:
> 1 | a { position: static; bottom: 20px; }
    |                       ^^^^^^^^^^^^ \`bottom\` has no effect with \`position: static\`. Insets require a positioned element.

`;

exports[`invalid(140): a { position: absolute; clear: right; } 1`] = `

  1 | a { position: absolute; clear: right; }

`;

exports[`invalid(140): a { position: absolute; clear: right; } 2`] = `

Message:
> 1 | a { position: absolute; clear: right; }
    |                         ^^^^^^^^^^^^ \`clear: right\` has no effect with \`position: absolute\`. Absolutely positioned elements do not participate in normal flow.

`;

exports[`invalid(141): a { position: absolute; clear: both; } 1`] = `

  1 | a { position: absolute; clear: both; }

`;

exports[`invalid(141): a { position: absolute; clear: both; } 2`] = `

Message:
> 1 | a { position: absolute; clear: both; }
    |                         ^^^^^^^^^^^ \`clear: both\` has no effect with \`position: absolute\`. Absolutely positioned elements do not participate in normal flow.

`;

exports[`invalid(142): a { position: absolute; clear: inline-start; } 1`] = `

  1 | a { position: absolute; clear: inline-start; }

`;

exports[`invalid(142): a { position: absolute; clear: inline-start; } 2`] = `

Message:
> 1 | a { position: absolute; clear: inline-start; }
    |                         ^^^^^^^^^^^^^^^^^^^ \`clear: inline-start\` has no effect with \`position: absolute\`. Absolutely positioned elements do not participate in normal flow.

`;

exports[`invalid(143): a { position: absolute; clear: inline-end; } 1`] = `

  1 | a { position: absolute; clear: inline-end; }

`;

exports[`invalid(143): a { position: absolute; clear: inline-end; } 2`] = `

Message:
> 1 | a { position: absolute; clear: inline-end; }
    |                         ^^^^^^^^^^^^^^^^^ \`clear: inline-end\` has no effect with \`position: absolute\`. Absolutely positioned elements do not participate in normal flow.

`;

exports[`invalid(144): a { clear: both; position: fixed !important; } 1`] = `

  1 | a { clear: both; position: fixed !important; }

`;

exports[`invalid(144): a { clear: both; position: fixed !important; } 2`] = `

Message:
> 1 | a { clear: both; position: fixed !important; }
    |     ^^^^^^^^^^^ \`clear: both\` has no effect with \`position: fixed\`. Absolutely positioned elements do not participate in normal flow.

`;

exports[`invalid(145): a { POSITION: ABSOLUTE; CLEAR: INLINE-END; } 1`] = `

  1 | a { POSITION: ABSOLUTE; CLEAR: INLINE-END; }

`;

exports[`invalid(145): a { POSITION: ABSOLUTE; CLEAR: INLINE-END; } 2`] = `

Message:
> 1 | a { POSITION: ABSOLUTE; CLEAR: INLINE-END; }
    |                         ^^^^^^^^^^^^^^^^^ \`clear: inline-end\` has no effect with \`position: absolute\`. Absolutely positioned elements do not participate in normal flow.

`;

exports[`invalid(146): a { position: f\\69 xed; cl\\65 ar: b\\6f th; } 1`] = `

  1 | a { position: f\\69 xed; cl\\65 ar: b\\6f th; }

`;

exports[`invalid(146): a { position: f\\69 xed; cl\\65 ar: b\\6f th; } 2`] = `

Message:
> 1 | a { position: f\\69 xed; cl\\65 ar: b\\6f th; }
    |                         ^^^^^^^^^^^^^^^^^ \`clear: both\` has no effect with \`position: fixed\`. Absolutely positioned elements do not participate in normal flow.

`;

exports[`invalid(147): a { @supports (position: fixed) { position: fixed; clear: /* floats */ left; } } 1`] = `

  1 | a { @supports (position: fixed) { position: fixed; clear: /* floats */ left; } }

`;

exports[`invalid(147): a { @supports (position: fixed) { position: fixed; clear: /* floats */ left; } } 2`] = `

Message:
> 1 | a { @supports (position: fixed) { position: fixed; clear: /* floats */ left; } }
    |                                                    ^^^^^^^^^^^^^^^^^^^^^^^^ \`clear: left\` has no effect with \`position: fixed\`. Absolutely positioned elements do not participate in normal flow.

`;

exports[`invalid(148): a { perspective: none; perspective-origin: left; } 1`] = `

  1 | a { perspective: none; perspective-origin: left; }

`;

exports[`invalid(148): a { perspective: none; perspective-origin: left; } 2`] = `

Message:
> 1 | a { perspective: none; perspective-origin: left; }
    |                        ^^^^^^^^^^^^^^^^^^^^^^^^ \`perspective-origin\` has no effect with \`perspective: none\`. Set a perspective distance to use this origin.

`;

exports[`invalid(149): a { perspective-origin: 20% 30%; perspective: none !important; } 1`] = `

  1 | a { perspective-origin: 20% 30%; perspective: none !important; }

`;

exports[`invalid(149): a { perspective-origin: 20% 30%; perspective: none !important; } 2`] = `

Message:
> 1 | a { perspective-origin: 20% 30%; perspective: none !important; }
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`perspective-origin\` has no effect with \`perspective: none\`. Set a perspective distance to use this origin.

`;

exports[`invalid(15): a { position: static; left: 20px; } 1`] = `

  1 | a { position: static; left: 20px; }

`;

exports[`invalid(15): a { position: static; left: 20px; } 2`] = `

Message:
> 1 | a { position: static; left: 20px; }
    |                       ^^^^^^^^^^ \`left\` has no effect with \`position: static\`. Insets require a positioned element.

`;

exports[`invalid(150): a { PERSPECTIVE: NONE; PERSPECTIVE-ORIGIN: LEFT TOP; } 1`] = `

  1 | a { PERSPECTIVE: NONE; PERSPECTIVE-ORIGIN: LEFT TOP; }

`;

exports[`invalid(150): a { PERSPECTIVE: NONE; PERSPECTIVE-ORIGIN: LEFT TOP; } 2`] = `

Message:
> 1 | a { PERSPECTIVE: NONE; PERSPECTIVE-ORIGIN: LEFT TOP; }
    |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`perspective-origin\` has no effect with \`perspective: none\`. Set a perspective distance to use this origin.

`;

exports[`invalid(151): a { perspe\\63 tive: n\\6f ne; perspective-orig\\69 n: left; } 1`] = `

  1 | a { perspe\\63 tive: n\\6f ne; perspective-orig\\69 n: left; }

`;

exports[`invalid(151): a { perspe\\63 tive: n\\6f ne; perspective-orig\\69 n: left; } 2`] = `

Message:
> 1 | a { perspe\\63 tive: n\\6f ne; perspective-orig\\69 n: left; }
    |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`perspective-origin\` has no effect with \`perspective: none\`. Set a perspective distance to use this origin.

`;

exports[`invalid(152): a { perspective: /* depth */ none; perspective-origin: /* viewpoint */ calc(50% + 1px) center; } 1`] = `

  1 | a { perspective: /* depth */ none; perspective-origin: /* viewpoint */ calc(50% + 1px) center; }

`;

exports[`invalid(152): a { perspective: /* depth */ none; perspective-origin: /* viewpoint */ calc(50% + 1px) center; } 2`] = `

Message:
> 1 | a { perspective: /* depth */ none; perspective-origin: /* viewpoint */ calc(50% + 1px) center; }
    |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`perspective-origin\` has no effect with \`perspective: none\`. Set a perspective distance to use this origin.

`;

exports[`invalid(153): a { perspective: none; transform: perspective(400px) rotateY(20deg); perspective-origin: left; } 1`] = `

  1 | a { perspective: none; transform: perspective(400px) rotateY(20deg); perspective-origin: left; }

`;

exports[`invalid(153): a { perspective: none; transform: perspective(400px) rotateY(20deg); perspective-origin: left; } 2`] = `

Message:
> 1 | a { perspective: none; transform: perspective(400px) rotateY(20deg); perspective-origin: left; }
    |                                                                      ^^^^^^^^^^^^^^^^^^^^^^^^ \`perspective-origin\` has no effect with \`perspective: none\`. Set a perspective distance to use this origin.

`;

exports[`invalid(154): a { @container (width > 1px) { perspective: none; perspective-origin: left; } } 1`] = `

  1 | a { @container (width > 1px) { perspective: none; perspective-origin: left; } }

`;

exports[`invalid(154): a { @container (width > 1px) { perspective: none; perspective-origin: left; } } 2`] = `

Message:
> 1 | a { @container (width > 1px) { perspective: none; perspective-origin: left; } }
    |                                                   ^^^^^^^^^^^^^^^^^^^^^^^^ \`perspective-origin\` has no effect with \`perspective: none\`. Set a perspective distance to use this origin.

`;

exports[`invalid(16): a { position: static; inset: 20px; } 1`] = `

  1 | a { position: static; inset: 20px; }

`;

exports[`invalid(16): a { position: static; inset: 20px; } 2`] = `

Message:
> 1 | a { position: static; inset: 20px; }
    |                       ^^^^^^^^^^^ \`inset\` has no effect with \`position: static\`. Insets require a positioned element.

`;

exports[`invalid(17): a { position: static; inset-block: 20px; } 1`] = `

  1 | a { position: static; inset-block: 20px; }

`;

exports[`invalid(17): a { position: static; inset-block: 20px; } 2`] = `

Message:
> 1 | a { position: static; inset-block: 20px; }
    |                       ^^^^^^^^^^^^^^^^^ \`inset-block\` has no effect with \`position: static\`. Insets require a positioned element.

`;

exports[`invalid(18): a { position: static; inset-inline: 20px; } 1`] = `

  1 | a { position: static; inset-inline: 20px; }

`;

exports[`invalid(18): a { position: static; inset-inline: 20px; } 2`] = `

Message:
> 1 | a { position: static; inset-inline: 20px; }
    |                       ^^^^^^^^^^^^^^^^^^ \`inset-inline\` has no effect with \`position: static\`. Insets require a positioned element.

`;

exports[`invalid(19): a { position: static; inset-block-start: 20px; } 1`] = `

  1 | a { position: static; inset-block-start: 20px; }

`;

exports[`invalid(19): a { position: static; inset-block-start: 20px; } 2`] = `

Message:
> 1 | a { position: static; inset-block-start: 20px; }
    |                       ^^^^^^^^^^^^^^^^^^^^^^^ \`inset-block-start\` has no effect with \`position: static\`. Insets require a positioned element.

`;

exports[`invalid(2): a { display: grid; flex-wrap: wrap; } 1`] = `

  1 | a { display: grid; flex-wrap: wrap; }

`;

exports[`invalid(2): a { display: grid; flex-wrap: wrap; } 2`] = `

Message:
> 1 | a { display: grid; flex-wrap: wrap; }
    |                    ^^^^^^^^^^^^^^^ \`flex-wrap\` has no effect with \`display: grid\`. It requires a flex container.

`;

exports[`invalid(20): a { position: static; inset-block-end: 20px; } 1`] = `

  1 | a { position: static; inset-block-end: 20px; }

`;

exports[`invalid(20): a { position: static; inset-block-end: 20px; } 2`] = `

Message:
> 1 | a { position: static; inset-block-end: 20px; }
    |                       ^^^^^^^^^^^^^^^^^^^^^ \`inset-block-end\` has no effect with \`position: static\`. Insets require a positioned element.

`;

exports[`invalid(21): a { position: static; inset-inline-start: 20px; } 1`] = `

  1 | a { position: static; inset-inline-start: 20px; }

`;

exports[`invalid(21): a { position: static; inset-inline-start: 20px; } 2`] = `

Message:
> 1 | a { position: static; inset-inline-start: 20px; }
    |                       ^^^^^^^^^^^^^^^^^^^^^^^^ \`inset-inline-start\` has no effect with \`position: static\`. Insets require a positioned element.

`;

exports[`invalid(22): a { position: static; inset-inline-end: 20px; } 1`] = `

  1 | a { position: static; inset-inline-end: 20px; }

`;

exports[`invalid(22): a { position: static; inset-inline-end: 20px; } 2`] = `

Message:
> 1 | a { position: static; inset-inline-end: 20px; }
    |                       ^^^^^^^^^^^^^^^^^^^^^^ \`inset-inline-end\` has no effect with \`position: static\`. Insets require a positioned element.

`;

exports[`invalid(23): a { display: block; flex-direction: column; grid-template-columns: 1fr 1fr; } 1`] = `

  1 | a { display: block; flex-direction: column; grid-template-columns: 1fr 1fr; }

`;

exports[`invalid(23): a { display: block; flex-direction: column; grid-template-columns: 1fr 1fr; } 2`] = `

Message:
> 1 | a { display: block; flex-direction: column; grid-template-columns: 1fr 1fr; }
    |                     ^^^^^^^^^^^^^^^^^^^^^^ \`flex-direction\` has no effect with \`display: block\`. It requires a flex container.

`;

exports[`invalid(23): a { display: block; flex-direction: column; grid-template-columns: 1fr 1fr; } 3`] = `

Message:
> 1 | a { display: block; flex-direction: column; grid-template-columns: 1fr 1fr; }
    |                                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`grid-template-columns\` has no effect with \`display: block\`. It requires a grid container.

`;

exports[`invalid(24): a { display: inline; flex-direction: column; grid-template-columns: 1fr 1fr; } 1`] = `

  1 | a { display: inline; flex-direction: column; grid-template-columns: 1fr 1fr; }

`;

exports[`invalid(24): a { display: inline; flex-direction: column; grid-template-columns: 1fr 1fr; } 2`] = `

Message:
> 1 | a { display: inline; flex-direction: column; grid-template-columns: 1fr 1fr; }
    |                      ^^^^^^^^^^^^^^^^^^^^^^ \`flex-direction\` has no effect with \`display: inline\`. It requires a flex container.

`;

exports[`invalid(24): a { display: inline; flex-direction: column; grid-template-columns: 1fr 1fr; } 3`] = `

Message:
> 1 | a { display: inline; flex-direction: column; grid-template-columns: 1fr 1fr; }
    |                                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`grid-template-columns\` has no effect with \`display: inline\`. It requires a grid container.

`;

exports[`invalid(25): a { display: inline-block; flex-direction: column; grid-template-columns: 1fr 1fr; } 1`] = `

  1 | a { display: inline-block; flex-direction: column; grid-template-columns: 1fr 1fr; }

`;

exports[`invalid(25): a { display: inline-block; flex-direction: column; grid-template-columns: 1fr 1fr; } 2`] = `

Message:
> 1 | a { display: inline-block; flex-direction: column; grid-template-columns: 1fr 1fr; }
    |                            ^^^^^^^^^^^^^^^^^^^^^^ \`flex-direction\` has no effect with \`display: inline-block\`. It requires a flex container.

`;

exports[`invalid(25): a { display: inline-block; flex-direction: column; grid-template-columns: 1fr 1fr; } 3`] = `

Message:
> 1 | a { display: inline-block; flex-direction: column; grid-template-columns: 1fr 1fr; }
    |                                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`grid-template-columns\` has no effect with \`display: inline-block\`. It requires a grid container.

`;

exports[`invalid(26): a { display: flow; flex-direction: column; grid-template-columns: 1fr 1fr; } 1`] = `

  1 | a { display: flow; flex-direction: column; grid-template-columns: 1fr 1fr; }

`;

exports[`invalid(26): a { display: flow; flex-direction: column; grid-template-columns: 1fr 1fr; } 2`] = `

Message:
> 1 | a { display: flow; flex-direction: column; grid-template-columns: 1fr 1fr; }
    |                    ^^^^^^^^^^^^^^^^^^^^^^ \`flex-direction\` has no effect with \`display: flow\`. It requires a flex container.

`;

exports[`invalid(26): a { display: flow; flex-direction: column; grid-template-columns: 1fr 1fr; } 3`] = `

Message:
> 1 | a { display: flow; flex-direction: column; grid-template-columns: 1fr 1fr; }
    |                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`grid-template-columns\` has no effect with \`display: flow\`. It requires a grid container.

`;

exports[`invalid(27): a { display: flow-root; flex-direction: column; grid-template-columns: 1fr 1fr; } 1`] = `

  1 | a { display: flow-root; flex-direction: column; grid-template-columns: 1fr 1fr; }

`;

exports[`invalid(27): a { display: flow-root; flex-direction: column; grid-template-columns: 1fr 1fr; } 2`] = `

Message:
> 1 | a { display: flow-root; flex-direction: column; grid-template-columns: 1fr 1fr; }
    |                         ^^^^^^^^^^^^^^^^^^^^^^ \`flex-direction\` has no effect with \`display: flow-root\`. It requires a flex container.

`;

exports[`invalid(27): a { display: flow-root; flex-direction: column; grid-template-columns: 1fr 1fr; } 3`] = `

Message:
> 1 | a { display: flow-root; flex-direction: column; grid-template-columns: 1fr 1fr; }
    |                                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`grid-template-columns\` has no effect with \`display: flow-root\`. It requires a grid container.

`;

exports[`invalid(28): a { display: table; flex-direction: column; grid-template-columns: 1fr 1fr; } 1`] = `

  1 | a { display: table; flex-direction: column; grid-template-columns: 1fr 1fr; }

`;

exports[`invalid(28): a { display: table; flex-direction: column; grid-template-columns: 1fr 1fr; } 2`] = `

Message:
> 1 | a { display: table; flex-direction: column; grid-template-columns: 1fr 1fr; }
    |                     ^^^^^^^^^^^^^^^^^^^^^^ \`flex-direction\` has no effect with \`display: table\`. It requires a flex container.

`;

exports[`invalid(28): a { display: table; flex-direction: column; grid-template-columns: 1fr 1fr; } 3`] = `

Message:
> 1 | a { display: table; flex-direction: column; grid-template-columns: 1fr 1fr; }
    |                                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`grid-template-columns\` has no effect with \`display: table\`. It requires a grid container.

`;

exports[`invalid(29): a { display: inline-table; flex-direction: column; grid-template-columns: 1fr 1fr; } 1`] = `

  1 | a { display: inline-table; flex-direction: column; grid-template-columns: 1fr 1fr; }

`;

exports[`invalid(29): a { display: inline-table; flex-direction: column; grid-template-columns: 1fr 1fr; } 2`] = `

Message:
> 1 | a { display: inline-table; flex-direction: column; grid-template-columns: 1fr 1fr; }
    |                            ^^^^^^^^^^^^^^^^^^^^^^ \`flex-direction\` has no effect with \`display: inline-table\`. It requires a flex container.

`;

exports[`invalid(29): a { display: inline-table; flex-direction: column; grid-template-columns: 1fr 1fr; } 3`] = `

Message:
> 1 | a { display: inline-table; flex-direction: column; grid-template-columns: 1fr 1fr; }
    |                                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`grid-template-columns\` has no effect with \`display: inline-table\`. It requires a grid container.

`;

exports[`invalid(3): a { display: grid; flex-flow: column wrap; } 1`] = `

  1 | a { display: grid; flex-flow: column wrap; }

`;

exports[`invalid(3): a { display: grid; flex-flow: column wrap; } 2`] = `

Message:
> 1 | a { display: grid; flex-flow: column wrap; }
    |                    ^^^^^^^^^^^^^^^^^^^^^^ \`flex-flow\` has no effect with \`display: grid\`. It requires a flex container.

`;

exports[`invalid(30): a { display: table-cell; flex-direction: column; grid-template-columns: 1fr 1fr; } 1`] = `

  1 | a { display: table-cell; flex-direction: column; grid-template-columns: 1fr 1fr; }

`;

exports[`invalid(30): a { display: table-cell; flex-direction: column; grid-template-columns: 1fr 1fr; } 2`] = `

Message:
> 1 | a { display: table-cell; flex-direction: column; grid-template-columns: 1fr 1fr; }
    |                          ^^^^^^^^^^^^^^^^^^^^^^ \`flex-direction\` has no effect with \`display: table-cell\`. It requires a flex container.

`;

exports[`invalid(30): a { display: table-cell; flex-direction: column; grid-template-columns: 1fr 1fr; } 3`] = `

Message:
> 1 | a { display: table-cell; flex-direction: column; grid-template-columns: 1fr 1fr; }
    |                                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`grid-template-columns\` has no effect with \`display: table-cell\`. It requires a grid container.

`;

exports[`invalid(31): a { display: table-row; flex-direction: column; grid-template-columns: 1fr 1fr; } 1`] = `

  1 | a { display: table-row; flex-direction: column; grid-template-columns: 1fr 1fr; }

`;

exports[`invalid(31): a { display: table-row; flex-direction: column; grid-template-columns: 1fr 1fr; } 2`] = `

Message:
> 1 | a { display: table-row; flex-direction: column; grid-template-columns: 1fr 1fr; }
    |                         ^^^^^^^^^^^^^^^^^^^^^^ \`flex-direction\` has no effect with \`display: table-row\`. It requires a flex container.

`;

exports[`invalid(31): a { display: table-row; flex-direction: column; grid-template-columns: 1fr 1fr; } 3`] = `

Message:
> 1 | a { display: table-row; flex-direction: column; grid-template-columns: 1fr 1fr; }
    |                                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`grid-template-columns\` has no effect with \`display: table-row\`. It requires a grid container.

`;

exports[`invalid(32): a { display: ruby; flex-direction: column; grid-template-columns: 1fr 1fr; } 1`] = `

  1 | a { display: ruby; flex-direction: column; grid-template-columns: 1fr 1fr; }

`;

exports[`invalid(32): a { display: ruby; flex-direction: column; grid-template-columns: 1fr 1fr; } 2`] = `

Message:
> 1 | a { display: ruby; flex-direction: column; grid-template-columns: 1fr 1fr; }
    |                    ^^^^^^^^^^^^^^^^^^^^^^ \`flex-direction\` has no effect with \`display: ruby\`. It requires a flex container.

`;

exports[`invalid(32): a { display: ruby; flex-direction: column; grid-template-columns: 1fr 1fr; } 3`] = `

Message:
> 1 | a { display: ruby; flex-direction: column; grid-template-columns: 1fr 1fr; }
    |                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`grid-template-columns\` has no effect with \`display: ruby\`. It requires a grid container.

`;

exports[`invalid(33): a { display: list-item; flex-direction: column; grid-template-columns: 1fr 1fr; } 1`] = `

  1 | a { display: list-item; flex-direction: column; grid-template-columns: 1fr 1fr; }

`;

exports[`invalid(33): a { display: list-item; flex-direction: column; grid-template-columns: 1fr 1fr; } 2`] = `

Message:
> 1 | a { display: list-item; flex-direction: column; grid-template-columns: 1fr 1fr; }
    |                         ^^^^^^^^^^^^^^^^^^^^^^ \`flex-direction\` has no effect with \`display: list-item\`. It requires a flex container.

`;

exports[`invalid(33): a { display: list-item; flex-direction: column; grid-template-columns: 1fr 1fr; } 3`] = `

Message:
> 1 | a { display: list-item; flex-direction: column; grid-template-columns: 1fr 1fr; }
    |                                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`grid-template-columns\` has no effect with \`display: list-item\`. It requires a grid container.

`;

exports[`invalid(34): a { display: inline flow-root; flex-direction: column; grid-template-columns: 1fr 1fr; } 1`] = `

  1 | a { display: inline flow-root; flex-direction: column; grid-template-columns: 1fr 1fr; }

`;

exports[`invalid(34): a { display: inline flow-root; flex-direction: column; grid-template-columns: 1fr 1fr; } 2`] = `

Message:
> 1 | a { display: inline flow-root; flex-direction: column; grid-template-columns: 1fr 1fr; }
    |                                ^^^^^^^^^^^^^^^^^^^^^^ \`flex-direction\` has no effect with \`display: inline flow-root\`. It requires a flex container.

`;

exports[`invalid(34): a { display: inline flow-root; flex-direction: column; grid-template-columns: 1fr 1fr; } 3`] = `

Message:
> 1 | a { display: inline flow-root; flex-direction: column; grid-template-columns: 1fr 1fr; }
    |                                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`grid-template-columns\` has no effect with \`display: inline flow-root\`. It requires a grid container.

`;

exports[`invalid(35): a { display: inline flow list-item; flex-direction: column; grid-template-columns: 1fr 1fr; } 1`] = `

  1 | a { display: inline flow list-item; flex-direction: column; grid-template-columns: 1fr 1fr; }

`;

exports[`invalid(35): a { display: inline flow list-item; flex-direction: column; grid-template-columns: 1fr 1fr; } 2`] = `

Message:
> 1 | a { display: inline flow list-item; flex-direction: column; grid-template-columns: 1fr 1fr; }
    |                                     ^^^^^^^^^^^^^^^^^^^^^^ \`flex-direction\` has no effect with \`display: inline flow list-item\`. It requires a flex container.

`;

exports[`invalid(35): a { display: inline flow list-item; flex-direction: column; grid-template-columns: 1fr 1fr; } 3`] = `

Message:
> 1 | a { display: inline flow list-item; flex-direction: column; grid-template-columns: 1fr 1fr; }
    |                                                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`grid-template-columns\` has no effect with \`display: inline flow list-item\`. It requires a grid container.

`;

exports[`invalid(36): a { display: inline-flex; grid-auto-flow: column; } 1`] = `

  1 | a { display: inline-flex; grid-auto-flow: column; }

`;

exports[`invalid(36): a { display: inline-flex; grid-auto-flow: column; } 2`] = `

Message:
> 1 | a { display: inline-flex; grid-auto-flow: column; }
    |                           ^^^^^^^^^^^^^^^^^^^^^^ \`grid-auto-flow\` has no effect with \`display: inline-flex\`. It requires a grid container.

`;

exports[`invalid(37): a { display: inline-grid; flex-wrap: wrap; } 1`] = `

  1 | a { display: inline-grid; flex-wrap: wrap; }

`;

exports[`invalid(37): a { display: inline-grid; flex-wrap: wrap; } 2`] = `

Message:
> 1 | a { display: inline-grid; flex-wrap: wrap; }
    |                           ^^^^^^^^^^^^^^^ \`flex-wrap\` has no effect with \`display: inline-grid\`. It requires a flex container.

`;

exports[`invalid(38): a { display: inline flex; grid-template-columns: 1fr 1fr; } 1`] = `

  1 | a { display: inline flex; grid-template-columns: 1fr 1fr; }

`;

exports[`invalid(38): a { display: inline flex; grid-template-columns: 1fr 1fr; } 2`] = `

Message:
> 1 | a { display: inline flex; grid-template-columns: 1fr 1fr; }
    |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`grid-template-columns\` has no effect with \`display: inline flex\`. It requires a grid container.

`;

exports[`invalid(39): a { display: grid block; flex-direction: column; } 1`] = `

  1 | a { display: grid block; flex-direction: column; }

`;

exports[`invalid(39): a { display: grid block; flex-direction: column; } 2`] = `

Message:
> 1 | a { display: grid block; flex-direction: column; }
    |                          ^^^^^^^^^^^^^^^^^^^^^^ \`flex-direction\` has no effect with \`display: grid block\`. It requires a flex container.

`;

exports[`invalid(4): a { display: flex; grid: auto-flow / 1fr 1fr; } 1`] = `

  1 | a { display: flex; grid: auto-flow / 1fr 1fr; }

`;

exports[`invalid(4): a { display: flex; grid: auto-flow / 1fr 1fr; } 2`] = `

Message:
> 1 | a { display: flex; grid: auto-flow / 1fr 1fr; }
    |                    ^^^^^^^^^^^^^^^^^^^^^^^^^ \`grid\` has no effect with \`display: flex\`. It requires a grid container.

`;

exports[`invalid(40): a { grid-template-columns: 1fr 1fr; display: flex; } 1`] = `

  1 | a { grid-template-columns: 1fr 1fr; display: flex; }

`;

exports[`invalid(40): a { grid-template-columns: 1fr 1fr; display: flex; } 2`] = `

Message:
> 1 | a { grid-template-columns: 1fr 1fr; display: flex; }
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`grid-template-columns\` has no effect with \`display: flex\`. It requires a grid container.

`;

exports[`invalid(41): a { display: FLEX; GRID-TEMPLATE-COLUMNS: 1fr 1fr !important; } 1`] = `

  1 | a { display: FLEX; GRID-TEMPLATE-COLUMNS: 1fr 1fr !important; }

`;

exports[`invalid(41): a { display: FLEX; GRID-TEMPLATE-COLUMNS: 1fr 1fr !important; } 2`] = `

Message:
> 1 | a { display: FLEX; GRID-TEMPLATE-COLUMNS: 1fr 1fr !important; }
    |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`grid-template-columns\` has no effect with \`display: flex\`. It requires a grid container.

`;

exports[`invalid(42): a { display: /* layout */ flex !important; grid-template-columns: /* tracks */ 1fr 1fr; } 1`] = `

  1 | a { display: /* layout */ flex !important; grid-template-columns: /* tracks */ 1fr 1fr; }

`;

exports[`invalid(42): a { display: /* layout */ flex !important; grid-template-columns: /* tracks */ 1fr 1fr; } 2`] = `

Message:
> 1 | a { display: /* layout */ flex !important; grid-template-columns: /* tracks */ 1fr 1fr; }
    |                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`grid-template-columns\` has no effect with \`display: flex\`. It requires a grid container.

`;

exports[`invalid(43): a { \\64 isplay: \\66 lex; grid-template-\\63 olumns: 1fr 1fr; } 1`] = `

  1 | a { \\64 isplay: \\66 lex; grid-template-\\63 olumns: 1fr 1fr; }

`;

exports[`invalid(43): a { \\64 isplay: \\66 lex; grid-template-\\63 olumns: 1fr 1fr; } 2`] = `

Message:
> 1 | a { \\64 isplay: \\66 lex; grid-template-\\63 olumns: 1fr 1fr; }
    |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`grid-template-columns\` has no effect with \`display: flex\`. It requires a grid container.

`;

exports[`invalid(44): a { display: flex; flex-wrap: nowrap; align-content: center; } 1`] = `

  1 | a { display: flex; flex-wrap: nowrap; align-content: center; }

`;

exports[`invalid(44): a { display: flex; flex-wrap: nowrap; align-content: center; } 2`] = `

Message:
> 1 | a { display: flex; flex-wrap: nowrap; align-content: center; }
    |                                       ^^^^^^^^^^^^^^^^^^^^^ \`align-content\` has no effect on a flex container with \`nowrap\`. Consider \`align-items\` or enabling wrapping.

`;

exports[`invalid(45): a { display: inline-flex; flex-flow: column nowrap; align-content: center; } 1`] = `

  1 | a { display: inline-flex; flex-flow: column nowrap; align-content: center; }

`;

exports[`invalid(45): a { display: inline-flex; flex-flow: column nowrap; align-content: center; } 2`] = `

Message:
> 1 | a { display: inline-flex; flex-flow: column nowrap; align-content: center; }
    |                                                     ^^^^^^^^^^^^^^^^^^^^^ \`align-content\` has no effect on a flex container with \`nowrap\`. Consider \`align-items\` or enabling wrapping.

`;

exports[`invalid(46): a { display: inline flex; flex-flow: nowrap row-reverse; align-content: space-between; } 1`] = `

  1 | a { display: inline flex; flex-flow: nowrap row-reverse; align-content: space-between; }

`;

exports[`invalid(46): a { display: inline flex; flex-flow: nowrap row-reverse; align-content: space-between; } 2`] = `

Message:
> 1 | a { display: inline flex; flex-flow: nowrap row-reverse; align-content: space-between; }
    |                                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`align-content\` has no effect on a flex container with \`nowrap\`. Consider \`align-items\` or enabling wrapping.

`;

exports[`invalid(47): a { display: flex; flex-flow: nowrap; align-content: center; } 1`] = `

  1 | a { display: flex; flex-flow: nowrap; align-content: center; }

`;

exports[`invalid(47): a { display: flex; flex-flow: nowrap; align-content: center; } 2`] = `

Message:
> 1 | a { display: flex; flex-flow: nowrap; align-content: center; }
    |                                       ^^^^^^^^^^^^^^^^^^^^^ \`align-content\` has no effect on a flex container with \`nowrap\`. Consider \`align-items\` or enabling wrapping.

`;

exports[`invalid(48): a { align-content: center; flex-wrap: nowrap !important; display: flex; } 1`] = `

  1 | a { align-content: center; flex-wrap: nowrap !important; display: flex; }

`;

exports[`invalid(48): a { align-content: center; flex-wrap: nowrap !important; display: flex; } 2`] = `

Message:
> 1 | a { align-content: center; flex-wrap: nowrap !important; display: flex; }
    |     ^^^^^^^^^^^^^^^^^^^^^ \`align-content\` has no effect on a flex container with \`nowrap\`. Consider \`align-items\` or enabling wrapping.

`;

exports[`invalid(49): a { DISPLAY: FLEX; FLEX-WRAP: NOWRAP; ALIGN-CONTENT: CENTER; } 1`] = `

  1 | a { DISPLAY: FLEX; FLEX-WRAP: NOWRAP; ALIGN-CONTENT: CENTER; }

`;

exports[`invalid(49): a { DISPLAY: FLEX; FLEX-WRAP: NOWRAP; ALIGN-CONTENT: CENTER; } 2`] = `

Message:
> 1 | a { DISPLAY: FLEX; FLEX-WRAP: NOWRAP; ALIGN-CONTENT: CENTER; }
    |                                       ^^^^^^^^^^^^^^^^^^^^^ \`align-content\` has no effect on a flex container with \`nowrap\`. Consider \`align-items\` or enabling wrapping.

`;

exports[`invalid(5): a { display: flex; grid-template: 100px / 1fr 1fr; } 1`] = `

  1 | a { display: flex; grid-template: 100px / 1fr 1fr; }

`;

exports[`invalid(5): a { display: flex; grid-template: 100px / 1fr 1fr; } 2`] = `

Message:
> 1 | a { display: flex; grid-template: 100px / 1fr 1fr; }
    |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`grid-template\` has no effect with \`display: flex\`. It requires a grid container.

`;

exports[`invalid(50): a { display: flex; flex-\\77 rap: no\\77 rap; align-\\63 ontent: center; } 1`] = `

  1 | a { display: flex; flex-\\77 rap: no\\77 rap; align-\\63 ontent: center; }

`;

exports[`invalid(50): a { display: flex; flex-\\77 rap: no\\77 rap; align-\\63 ontent: center; } 2`] = `

Message:
> 1 | a { display: flex; flex-\\77 rap: no\\77 rap; align-\\63 ontent: center; }
    |                                             ^^^^^^^^^^^^^^^^^^^^^^^^ \`align-content\` has no effect on a flex container with \`nowrap\`. Consider \`align-items\` or enabling wrapping.

`;

exports[`invalid(51): a { top: 20px; position: static !important; } 1`] = `

  1 | a { top: 20px; position: static !important; }

`;

exports[`invalid(51): a { top: 20px; position: static !important; } 2`] = `

Message:
> 1 | a { top: 20px; position: static !important; }
    |     ^^^^^^^^^ \`top\` has no effect with \`position: static\`. Insets require a positioned element.

`;

exports[`invalid(52): a { POSITION: STATIC; INSET-BLOCK: 20px !important; } 1`] = `

  1 | a { POSITION: STATIC; INSET-BLOCK: 20px !important; }

`;

exports[`invalid(52): a { POSITION: STATIC; INSET-BLOCK: 20px !important; } 2`] = `

Message:
> 1 | a { POSITION: STATIC; INSET-BLOCK: 20px !important; }
    |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`inset-block\` has no effect with \`position: static\`. Insets require a positioned element.

`;

exports[`invalid(53): a { position: \\73 tatic; inset-\\69 nline: 20px; } 1`] = `

  1 | a { position: \\73 tatic; inset-\\69 nline: 20px; }

`;

exports[`invalid(53): a { position: \\73 tatic; inset-\\69 nline: 20px; } 2`] = `

Message:
> 1 | a { position: \\73 tatic; inset-\\69 nline: 20px; }
    |                          ^^^^^^^^^^^^^^^^^^^^^ \`inset-inline\` has no effect with \`position: static\`. Insets require a positioned element.

`;

exports[`invalid(54): a { position: static; inset: /* retain */ 20px; } 1`] = `

  1 | a { position: static; inset: /* retain */ 20px; }

`;

exports[`invalid(54): a { position: static; inset: /* retain */ 20px; } 2`] = `

Message:
> 1 | a { position: static; inset: /* retain */ 20px; }
    |                       ^^^^^^^^^^^^^^^^^^^^^^^^ \`inset\` has no effect with \`position: static\`. Insets require a positioned element.

`;

exports[`invalid(55): a { overflow: visible; text-overflow: ellipsis; } 1`] = `

  1 | a { overflow: visible; text-overflow: ellipsis; }

`;

exports[`invalid(55): a { overflow: visible; text-overflow: ellipsis; } 2`] = `

Message:
> 1 | a { overflow: visible; text-overflow: ellipsis; }
    |                        ^^^^^^^^^^^^^^^^^^^^^^^ \`text-overflow: ellipsis\` has no effect with \`overflow: visible\`. Ellipsis requires clipped inline overflow.

`;

exports[`invalid(56): a { overflow: visible visible; text-overflow: ellipsis; } 1`] = `

  1 | a { overflow: visible visible; text-overflow: ellipsis; }

`;

exports[`invalid(56): a { overflow: visible visible; text-overflow: ellipsis; } 2`] = `

Message:
> 1 | a { overflow: visible visible; text-overflow: ellipsis; }
    |                                ^^^^^^^^^^^^^^^^^^^^^^^ \`text-overflow: ellipsis\` has no effect with \`overflow: visible\`. Ellipsis requires clipped inline overflow.

`;

exports[`invalid(57): a { TEXT-OVERFLOW: ELLIPSIS; OVERFLOW: VISIBLE !important; } 1`] = `

  1 | a { TEXT-OVERFLOW: ELLIPSIS; OVERFLOW: VISIBLE !important; }

`;

exports[`invalid(57): a { TEXT-OVERFLOW: ELLIPSIS; OVERFLOW: VISIBLE !important; } 2`] = `

Message:
> 1 | a { TEXT-OVERFLOW: ELLIPSIS; OVERFLOW: VISIBLE !important; }
    |     ^^^^^^^^^^^^^^^^^^^^^^^ \`text-overflow: ellipsis\` has no effect with \`overflow: visible\`. Ellipsis requires clipped inline overflow.

`;

exports[`invalid(58): a { o\\76 erflow: \\76 isible; text-overflow: \\65 llipsis; } 1`] = `

  1 | a { o\\76 erflow: \\76 isible; text-overflow: \\65 llipsis; }

`;

exports[`invalid(58): a { o\\76 erflow: \\76 isible; text-overflow: \\65 llipsis; } 2`] = `

Message:
> 1 | a { o\\76 erflow: \\76 isible; text-overflow: \\65 llipsis; }
    |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^ \`text-overflow: ellipsis\` has no effect with \`overflow: visible\`. Ellipsis requires clipped inline overflow.

`;

exports[`invalid(59): a { overflow: visible; text-overflow: ellipsis; writing-mode: vertical-rl; } 1`] = `

  1 | a { overflow: visible; text-overflow: ellipsis; writing-mode: vertical-rl; }

`;

exports[`invalid(59): a { overflow: visible; text-overflow: ellipsis; writing-mode: vertical-rl; } 2`] = `

Message:
> 1 | a { overflow: visible; text-overflow: ellipsis; writing-mode: vertical-rl; }
    |                        ^^^^^^^^^^^^^^^^^^^^^^^ \`text-overflow: ellipsis\` has no effect with \`overflow: visible\`. Ellipsis requires clipped inline overflow.

`;

exports[`invalid(6): a { display: flex; grid-template-columns: 1fr 1fr; } 1`] = `

  1 | a { display: flex; grid-template-columns: 1fr 1fr; }

`;

exports[`invalid(6): a { display: flex; grid-template-columns: 1fr 1fr; } 2`] = `

Message:
> 1 | a { display: flex; grid-template-columns: 1fr 1fr; }
    |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`grid-template-columns\` has no effect with \`display: flex\`. It requires a grid container.

`;

exports[`invalid(60): a { display: flex; & b { display: grid; flex-direction: column; } } 1`] = `

  1 | a { display: flex; & b { display: grid; flex-direction: column; } }

`;

exports[`invalid(60): a { display: flex; & b { display: grid; flex-direction: column; } } 2`] = `

Message:
> 1 | a { display: flex; & b { display: grid; flex-direction: column; } }
    |                                         ^^^^^^^^^^^^^^^^^^^^^^ \`flex-direction\` has no effect with \`display: grid\`. It requires a flex container.

`;

exports[`invalid(61): a { @media (width > 1px) { display: flex; grid-template-columns: 1fr 1fr; } } 1`] = `

  1 | a { @media (width > 1px) { display: flex; grid-template-columns: 1fr 1fr; } }

`;

exports[`invalid(61): a { @media (width > 1px) { display: flex; grid-template-columns: 1fr 1fr; } } 2`] = `

Message:
> 1 | a { @media (width > 1px) { display: flex; grid-template-columns: 1fr 1fr; } }
    |                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`grid-template-columns\` has no effect with \`display: flex\`. It requires a grid container.

`;

exports[`invalid(62): @media (width > 1px) { a { position: static; top: 20px; } } 1`] = `

  1 | @media (width > 1px) { a { position: static; top: 20px; } }

`;

exports[`invalid(62): @media (width > 1px) { a { position: static; top: 20px; } } 2`] = `

Message:
> 1 | @media (width > 1px) { a { position: static; top: 20px; } }
    |                                              ^^^^^^^^^ \`top\` has no effect with \`position: static\`. Insets require a positioned element.

`;

exports[`invalid(63): @supports (display: grid) { a { position: static; top: 20px; } } 1`] = `

  1 | @supports (display: grid) { a { position: static; top: 20px; } }

`;

exports[`invalid(63): @supports (display: grid) { a { position: static; top: 20px; } } 2`] = `

Message:
> 1 | @supports (display: grid) { a { position: static; top: 20px; } }
    |                                                   ^^^^^^^^^ \`top\` has no effect with \`position: static\`. Insets require a positioned element.

`;

exports[`invalid(64): @container (width > 1px) { a { position: static; top: 20px; } } 1`] = `

  1 | @container (width > 1px) { a { position: static; top: 20px; } }

`;

exports[`invalid(64): @container (width > 1px) { a { position: static; top: 20px; } } 2`] = `

Message:
> 1 | @container (width > 1px) { a { position: static; top: 20px; } }
    |                                                  ^^^^^^^^^ \`top\` has no effect with \`position: static\`. Insets require a positioned element.

`;

exports[`invalid(65): @layer example { a { position: static; top: 20px; } } 1`] = `

  1 | @layer example { a { position: static; top: 20px; } }

`;

exports[`invalid(65): @layer example { a { position: static; top: 20px; } } 2`] = `

Message:
> 1 | @layer example { a { position: static; top: 20px; } }
    |                                        ^^^^^^^^^ \`top\` has no effect with \`position: static\`. Insets require a positioned element.

`;

exports[`invalid(66): @scope (.example) { a { position: static; top: 20px; } } 1`] = `

  1 | @scope (.example) { a { position: static; top: 20px; } }

`;

exports[`invalid(66): @scope (.example) { a { position: static; top: 20px; } } 2`] = `

Message:
> 1 | @scope (.example) { a { position: static; top: 20px; } }
    |                                           ^^^^^^^^^ \`top\` has no effect with \`position: static\`. Insets require a positioned element.

`;

exports[`invalid(67): a { @SUPPORTS (display: grid) { position: static; top: 20px; } } 1`] = `

  1 | a { @SUPPORTS (display: grid) { position: static; top: 20px; } }

`;

exports[`invalid(67): a { @SUPPORTS (display: grid) { position: static; top: 20px; } } 2`] = `

Message:
> 1 | a { @SUPPORTS (display: grid) { position: static; top: 20px; } }
    |                                                   ^^^^^^^^^ \`top\` has no effect with \`position: static\`. Insets require a positioned element.

`;

exports[`invalid(68): a { display: var(--layout); position: static; top: 20px; } 1`] = `

  1 | a { display: var(--layout); position: static; top: 20px; }

`;

exports[`invalid(68): a { display: var(--layout); position: static; top: 20px; } 2`] = `

Message:
> 1 | a { display: var(--layout); position: static; top: 20px; }
    |                                               ^^^^^^^^^ \`top\` has no effect with \`position: static\`. Insets require a positioned element.

`;

exports[`invalid(69): a { display: inline\\2d flex; grid-auto-flow: column; } 1`] = `

  1 | a { display: inline\\2d flex; grid-auto-flow: column; }

`;

exports[`invalid(69): a { display: inline\\2d flex; grid-auto-flow: column; } 2`] = `

Message:
> 1 | a { display: inline\\2d flex; grid-auto-flow: column; }
    |                              ^^^^^^^^^^^^^^^^^^^^^^ \`grid-auto-flow\` has no effect with \`display: inline-flex\`. It requires a grid container.

`;

exports[`invalid(7): a { display: flex; grid-template-rows: 100px 100px; } 1`] = `

  1 | a { display: flex; grid-template-rows: 100px 100px; }

`;

exports[`invalid(7): a { display: flex; grid-template-rows: 100px 100px; } 2`] = `

Message:
> 1 | a { display: flex; grid-template-rows: 100px 100px; }
    |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`grid-template-rows\` has no effect with \`display: flex\`. It requires a grid container.

`;

exports[`invalid(70): a { @container (width > 1px) { display: flex; grid-template-columns: 1fr; } } 1`] = `

  1 | a { @container (width > 1px) { display: flex; grid-template-columns: 1fr; } }

`;

exports[`invalid(70): a { @container (width > 1px) { display: flex; grid-template-columns: 1fr; } } 2`] = `

Message:
> 1 | a { @container (width > 1px) { display: flex; grid-template-columns: 1fr; } }
    |                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^ \`grid-template-columns\` has no effect with \`display: flex\`. It requires a grid container.

`;

exports[`invalid(71): a { @layer example { display: flex; grid-template-columns: 1fr; } } 1`] = `

  1 | a { @layer example { display: flex; grid-template-columns: 1fr; } }

`;

exports[`invalid(71): a { @layer example { display: flex; grid-template-columns: 1fr; } } 2`] = `

Message:
> 1 | a { @layer example { display: flex; grid-template-columns: 1fr; } }
    |                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^ \`grid-template-columns\` has no effect with \`display: flex\`. It requires a grid container.

`;

exports[`invalid(72): a { @scope (.example) { display: flex; grid-template-columns: 1fr; } } 1`] = `

  1 | a { @scope (.example) { display: flex; grid-template-columns: 1fr; } }

`;

exports[`invalid(72): a { @scope (.example) { display: flex; grid-template-columns: 1fr; } } 2`] = `

Message:
> 1 | a { @scope (.example) { display: flex; grid-template-columns: 1fr; } }
    |                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^ \`grid-template-columns\` has no effect with \`display: flex\`. It requires a grid container.

`;

exports[`invalid(73): a { @starting-style { display: flex; grid-template-columns: 1fr; } } 1`] = `

  1 | a { @starting-style { display: flex; grid-template-columns: 1fr; } }

`;

exports[`invalid(73): a { @starting-style { display: flex; grid-template-columns: 1fr; } } 2`] = `

Message:
> 1 | a { @starting-style { display: flex; grid-template-columns: 1fr; } }
    |                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^ \`grid-template-columns\` has no effect with \`display: flex\`. It requires a grid container.

`;

exports[`invalid(74): a { display: flex; grid-template-columns: repeat(2, minmax(0, 1fr)); } 1`] = `

  1 | a { display: flex; grid-template-columns: repeat(2, minmax(0, 1fr)); }

`;

exports[`invalid(74): a { display: flex; grid-template-columns: repeat(2, minmax(0, 1fr)); } 2`] = `

Message:
> 1 | a { display: flex; grid-template-columns: repeat(2, minmax(0, 1fr)); }
    |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`grid-template-columns\` has no effect with \`display: flex\`. It requires a grid container.

`;

exports[`invalid(75): a { position: static; top: calc(1rem + 2px); } 1`] = `

  1 | a { position: static; top: calc(1rem + 2px); }

`;

exports[`invalid(75): a { position: static; top: calc(1rem + 2px); } 2`] = `

Message:
> 1 | a { position: static; top: calc(1rem + 2px); }
    |                       ^^^^^^^^^^^^^^^^^^^^^ \`top\` has no effect with \`position: static\`. Insets require a positioned element.

`;

exports[`invalid(76): a { display: flex; columns: 12rem 2; } 1`] = `

  1 | a { display: flex; columns: 12rem 2; }

`;

exports[`invalid(76): a { display: flex; columns: 12rem 2; } 2`] = `

Message:
> 1 | a { display: flex; columns: 12rem 2; }
    |                    ^^^^^^^^^^^^^^^^ \`columns\` has no effect with \`display: flex\`. Multicol properties require a block container.

`;

exports[`invalid(77): a { display: grid; columns: 12rem 2; } 1`] = `

  1 | a { display: grid; columns: 12rem 2; }

`;

exports[`invalid(77): a { display: grid; columns: 12rem 2; } 2`] = `

Message:
> 1 | a { display: grid; columns: 12rem 2; }
    |                    ^^^^^^^^^^^^^^^^ \`columns\` has no effect with \`display: grid\`. Multicol properties require a block container.

`;

exports[`invalid(78): a { display: flex; column-count: 3; } 1`] = `

  1 | a { display: flex; column-count: 3; }

`;

exports[`invalid(78): a { display: flex; column-count: 3; } 2`] = `

Message:
> 1 | a { display: flex; column-count: 3; }
    |                    ^^^^^^^^^^^^^^^ \`column-count\` has no effect with \`display: flex\`. Multicol properties require a block container.

`;

exports[`invalid(79): a { display: grid; column-count: 3; } 1`] = `

  1 | a { display: grid; column-count: 3; }

`;

exports[`invalid(79): a { display: grid; column-count: 3; } 2`] = `

Message:
> 1 | a { display: grid; column-count: 3; }
    |                    ^^^^^^^^^^^^^^^ \`column-count\` has no effect with \`display: grid\`. Multicol properties require a block container.

`;

exports[`invalid(8): a { display: flex; grid-template-areas: \"header header\"; } 1`] = `

  1 | a { display: flex; grid-template-areas: "header header"; }

`;

exports[`invalid(8): a { display: flex; grid-template-areas: \"header header\"; } 2`] = `

Message:
> 1 | a { display: flex; grid-template-areas: "header header"; }
    |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`grid-template-areas\` has no effect with \`display: flex\`. It requires a grid container.

`;

exports[`invalid(80): a { display: flex; column-width: 12rem; } 1`] = `

  1 | a { display: flex; column-width: 12rem; }

`;

exports[`invalid(80): a { display: flex; column-width: 12rem; } 2`] = `

Message:
> 1 | a { display: flex; column-width: 12rem; }
    |                    ^^^^^^^^^^^^^^^^^^^ \`column-width\` has no effect with \`display: flex\`. Multicol properties require a block container.

`;

exports[`invalid(81): a { display: grid; column-width: 12rem; } 1`] = `

  1 | a { display: grid; column-width: 12rem; }

`;

exports[`invalid(81): a { display: grid; column-width: 12rem; } 2`] = `

Message:
> 1 | a { display: grid; column-width: 12rem; }
    |                    ^^^^^^^^^^^^^^^^^^^ \`column-width\` has no effect with \`display: grid\`. Multicol properties require a block container.

`;

exports[`invalid(82): a { display: inline-flex; column-count: 2; } 1`] = `

  1 | a { display: inline-flex; column-count: 2; }

`;

exports[`invalid(82): a { display: inline-flex; column-count: 2; } 2`] = `

Message:
> 1 | a { display: inline-flex; column-count: 2; }
    |                           ^^^^^^^^^^^^^^^ \`column-count\` has no effect with \`display: inline-flex\`. Multicol properties require a block container.

`;

exports[`invalid(83): a { display: inline grid; columns: 2; } 1`] = `

  1 | a { display: inline grid; columns: 2; }

`;

exports[`invalid(83): a { display: inline grid; columns: 2; } 2`] = `

Message:
> 1 | a { display: inline grid; columns: 2; }
    |                           ^^^^^^^^^^ \`columns\` has no effect with \`display: inline grid\`. Multicol properties require a block container.

`;

exports[`invalid(84): a { COLUMN-WIDTH: 12rem !important; DISPLAY: FLEX; } 1`] = `

  1 | a { COLUMN-WIDTH: 12rem !important; DISPLAY: FLEX; }

`;

exports[`invalid(84): a { COLUMN-WIDTH: 12rem !important; DISPLAY: FLEX; } 2`] = `

Message:
> 1 | a { COLUMN-WIDTH: 12rem !important; DISPLAY: FLEX; }
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`column-width\` has no effect with \`display: flex\`. Multicol properties require a block container.

`;

exports[`invalid(85): a { display: \\67 rid; column-\\63 ount: 2; } 1`] = `

  1 | a { display: \\67 rid; column-\\63 ount: 2; }

`;

exports[`invalid(85): a { display: \\67 rid; column-\\63 ount: 2; } 2`] = `

Message:
> 1 | a { display: \\67 rid; column-\\63 ount: 2; }
    |                       ^^^^^^^^^^^^^^^^^^ \`column-count\` has no effect with \`display: grid\`. Multicol properties require a block container.

`;

exports[`invalid(86): a { display: flex; @supports (display: grid) { display: grid; columns: 2; } } 1`] = `

  1 | a { display: flex; @supports (display: grid) { display: grid; columns: 2; } }

`;

exports[`invalid(86): a { display: flex; @supports (display: grid) { display: grid; columns: 2; } } 2`] = `

Message:
> 1 | a { display: flex; @supports (display: grid) { display: grid; columns: 2; } }
    |                                                               ^^^^^^^^^^ \`columns\` has no effect with \`display: grid\`. Multicol properties require a block container.

`;

exports[`invalid(87): a { display: flex; position: absolute; float: left; column-width: 12rem; } 1`] = `

  1 | a { display: flex; position: absolute; float: left; column-width: 12rem; }

`;

exports[`invalid(87): a { display: flex; position: absolute; float: left; column-width: 12rem; } 2`] = `

Message:
> 1 | a { display: flex; position: absolute; float: left; column-width: 12rem; }
    |                                        ^^^^^^^^^^^ \`float: left\` has no effect with \`position: absolute\`. Absolutely positioned elements cannot float.

`;

exports[`invalid(87): a { display: flex; position: absolute; float: left; column-width: 12rem; } 3`] = `

Message:
> 1 | a { display: flex; position: absolute; float: left; column-width: 12rem; }
    |                                                     ^^^^^^^^^^^^^^^^^^^ \`column-width\` has no effect with \`display: flex\`. Multicol properties require a block container.

`;

exports[`invalid(88): a { position: absolute; float: left; } 1`] = `

  1 | a { position: absolute; float: left; }

`;

exports[`invalid(88): a { position: absolute; float: left; } 2`] = `

Message:
> 1 | a { position: absolute; float: left; }
    |                         ^^^^^^^^^^^ \`float: left\` has no effect with \`position: absolute\`. Absolutely positioned elements cannot float.

`;

exports[`invalid(89): a { position: absolute; float: right; } 1`] = `

  1 | a { position: absolute; float: right; }

`;

exports[`invalid(89): a { position: absolute; float: right; } 2`] = `

Message:
> 1 | a { position: absolute; float: right; }
    |                         ^^^^^^^^^^^^ \`float: right\` has no effect with \`position: absolute\`. Absolutely positioned elements cannot float.

`;

exports[`invalid(9): a { display: flex; grid-auto-columns: 100px; } 1`] = `

  1 | a { display: flex; grid-auto-columns: 100px; }

`;

exports[`invalid(9): a { display: flex; grid-auto-columns: 100px; } 2`] = `

Message:
> 1 | a { display: flex; grid-auto-columns: 100px; }
    |                    ^^^^^^^^^^^^^^^^^^^^^^^^ \`grid-auto-columns\` has no effect with \`display: flex\`. It requires a grid container.

`;

exports[`invalid(90): a { position: absolute; float: inline-start; } 1`] = `

  1 | a { position: absolute; float: inline-start; }

`;

exports[`invalid(90): a { position: absolute; float: inline-start; } 2`] = `

Message:
> 1 | a { position: absolute; float: inline-start; }
    |                         ^^^^^^^^^^^^^^^^^^^ \`float: inline-start\` has no effect with \`position: absolute\`. Absolutely positioned elements cannot float.

`;

exports[`invalid(91): a { position: absolute; float: inline-end; } 1`] = `

  1 | a { position: absolute; float: inline-end; }

`;

exports[`invalid(91): a { position: absolute; float: inline-end; } 2`] = `

Message:
> 1 | a { position: absolute; float: inline-end; }
    |                         ^^^^^^^^^^^^^^^^^ \`float: inline-end\` has no effect with \`position: absolute\`. Absolutely positioned elements cannot float.

`;

exports[`invalid(92): a { float: right; position: fixed; } 1`] = `

  1 | a { float: right; position: fixed; }

`;

exports[`invalid(92): a { float: right; position: fixed; } 2`] = `

Message:
> 1 | a { float: right; position: fixed; }
    |     ^^^^^^^^^^^^ \`float: right\` has no effect with \`position: fixed\`. Absolutely positioned elements cannot float.

`;

exports[`invalid(93): a { POSITION: FIXED; FLOAT: INLINE-END !important; } 1`] = `

  1 | a { POSITION: FIXED; FLOAT: INLINE-END !important; }

`;

exports[`invalid(93): a { POSITION: FIXED; FLOAT: INLINE-END !important; } 2`] = `

Message:
> 1 | a { POSITION: FIXED; FLOAT: INLINE-END !important; }
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`float: inline-end\` has no effect with \`position: fixed\`. Absolutely positioned elements cannot float.

`;

exports[`invalid(94): a { position: a\\62 solute; \\66 loat: \\6c eft; } 1`] = `

  1 | a { position: a\\62 solute; \\66 loat: \\6c eft; }

`;

exports[`invalid(94): a { position: a\\62 solute; \\66 loat: \\6c eft; } 2`] = `

Message:
> 1 | a { position: a\\62 solute; \\66 loat: \\6c eft; }
    |                            ^^^^^^^^^^^^^^^^^ \`float: left\` has no effect with \`position: absolute\`. Absolutely positioned elements cannot float.

`;

exports[`invalid(95): a { @media (width > 1px) { position: fixed; float: /* side */ left; } } 1`] = `

  1 | a { @media (width > 1px) { position: fixed; float: /* side */ left; } }

`;

exports[`invalid(95): a { @media (width > 1px) { position: fixed; float: /* side */ left; } } 2`] = `

Message:
> 1 | a { @media (width > 1px) { position: fixed; float: /* side */ left; } }
    |                                             ^^^^^^^^^^^^^^^^^^^^^^ \`float: left\` has no effect with \`position: fixed\`. Absolutely positioned elements cannot float.

`;

exports[`invalid(96): a { overflow: visible; text-overflow: clip ellipsis; } 1`] = `

  1 | a { overflow: visible; text-overflow: clip ellipsis; }

`;

exports[`invalid(96): a { overflow: visible; text-overflow: clip ellipsis; } 2`] = `

Message:
> 1 | a { overflow: visible; text-overflow: clip ellipsis; }
    |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`text-overflow: clip ellipsis\` has no effect with \`overflow: visible\`. Ellipsis requires clipped inline overflow.

`;

exports[`invalid(97): a { overflow: visible; text-overflow: ellipsis clip; } 1`] = `

  1 | a { overflow: visible; text-overflow: ellipsis clip; }

`;

exports[`invalid(97): a { overflow: visible; text-overflow: ellipsis clip; } 2`] = `

Message:
> 1 | a { overflow: visible; text-overflow: ellipsis clip; }
    |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`text-overflow: ellipsis clip\` has no effect with \`overflow: visible\`. Ellipsis requires clipped inline overflow.

`;

exports[`invalid(98): a { overflow: visible; text-overflow: ellipsis ellipsis; } 1`] = `

  1 | a { overflow: visible; text-overflow: ellipsis ellipsis; }

`;

exports[`invalid(98): a { overflow: visible; text-overflow: ellipsis ellipsis; } 2`] = `

Message:
> 1 | a { overflow: visible; text-overflow: ellipsis ellipsis; }
    |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`text-overflow: ellipsis ellipsis\` has no effect with \`overflow: visible\`. Ellipsis requires clipped inline overflow.

`;

exports[`invalid(99): a { TEXT-OVERFLOW: CLIP ELLIPSIS !important; OVERFLOW: VISIBLE; } 1`] = `

  1 | a { TEXT-OVERFLOW: CLIP ELLIPSIS !important; OVERFLOW: VISIBLE; }

`;

exports[`invalid(99): a { TEXT-OVERFLOW: CLIP ELLIPSIS !important; OVERFLOW: VISIBLE; } 2`] = `

Message:
> 1 | a { TEXT-OVERFLOW: CLIP ELLIPSIS !important; OVERFLOW: VISIBLE; }
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`text-overflow: clip ellipsis\` has no effect with \`overflow: visible\`. Ellipsis requires clipped inline overflow.

`;
